# nil

./: .aider.chat.history.md  .aider.input.history  .gitignore  .gitmodules  Cargo.toml  flake.nix  removed_db.md  structure.md
.aider.tags.cache.v4/: cache.db
crates/builtin/: Cargo.toml  build.rs
crates/builtin/src/: lib.rs
crates/ide/: Cargo.toml
crates/ide/src/: base.rs  lib.rs  tests.rs
crates/ide/src/def/: kind.rs  liveness.rs  lower.rs  mod.rs  nameres.rs  path.rs  tests.rs
crates/ide/src/ide/: completion.rs  diagnostics.rs  expand_selection.rs  file_references.rs  goto_definition.rs  highlight_related.rs  hover.rs  inlay_hints.rs  links.rs  mod.rs  references.rs  rename.rs  symbol_hierarchy.rs  syntax_highlighting.rs
crates/ide/src/ide/assists/: mod.rs
crates/ide/src/ty/: convert.rs  display.rs  err2.rs  error.rs  infer.rs  infer2.rs  known.rs  mod.rs  tests.rs
crates/nil/: Cargo.toml
crates/nil/src/: capabilities.rs  convert.rs  handler.rs  server.rs  vfs.rs
crates/nix-interop/: Cargo.toml
crates/nix-interop/src/: flake_output.rs  info.rs  nixos_options.rs
crates/syntax/: Cargo.toml
crates/syntax/src/: parser.rs
dev/: flake.nix  vscodium.nix
docs/: architecture.md  features.md
spec/: main.agda  nix.agda-lib
test_data/: simple.nix
